k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: da-bubble
spec:
  selector:
    app: da-bubble
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
